Added popup text objects

--- a/Todo.txt
+++ b/Todo.txt
@@ -2,8 +2,8 @@ Pupil movement
 ---DONE--- Remove tap to jump logic
 ---DONE--- Add reset func
 ---DONE--- Remove excess input junk (pos is not needed)
-Add miss fall out
-Add main menu
+---DONE--- Add miss fall out
+---DONE--- Add main menu
 Add height + max height + #flips + max flips
 Add missions
     - Do a flip
@@ -42,5 +42,5 @@ Sounds - good/perfect/miss/goal complete
 Add leg rendering interpolation?
 Fix cam scale coming back down to normal (stops sometimes)
 Add that num flips = multiplier on jump height
-Add instructions
+---DONE--- Add instructions
 Add x2 x3 x4 etc. multiplier text popouts on flips
