--- a/Todo.txt
+++ b/Todo.txt
@@ -5,8 +5,8 @@
 ---DONE--- Add miss fall out
 ---DONE--- Add main menu
 ---DONE--- Add height + max height + #flips + max flips
-Fix cam zooming so it doesn't go out as far
-Add missions
+---DONE--- Fix cam zooming so it doesn't go out as far
+---DONE--- Add missions
     - Do a flip
     - do a double
     - do a triple
